--- a/src/styles/contact.module.scss
+++ b/src/styles/contact.module.scss
@@ -9,7 +9,8 @@
 .container {
   max-width: 120rem;
   margin: 0 auto;
-  padding: 12.8rem 0;
+  // padding: 12.8rem 1.2rem;
+  padding: 12.8rem 2%;
 
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -24,7 +25,7 @@
 }
 
 .column-heading {
-  margin-bottom: 3.2rem;
+  margin-bottom: 4.8rem;
 }
 
 .contact-info {
