--- a/src/styles/hero-section.module.scss
+++ b/src/styles/hero-section.module.scss
@@ -3,14 +3,17 @@ $logo-green: #7bb41c;
 
 .container {
   max-width: 120rem;
+  height: inherit;
   margin: 0 auto;
+  position: relative;
+
+  // padding: 0 1.2rem;
+  padding: 0 2%;
 }
 
 .hero-section {
   height: 100vh;
   color: #fff;
-
-  position: relative;
 
   background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),
     url(../images/hero-section-bg.jpg);
@@ -27,38 +30,10 @@ $logo-green: #7bb41c;
   color: #fff;
 }
 
-.nav-bar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 2.4rem 0.8rem;
-}
-
-.main-nav {
-  display: flex;
-  list-style: none;
-  gap: 7.2rem;
-}
-
-.nav-btn:link,
-.nav-btn:visited {
-  padding: 0.8rem 0;
-  font-size: 2rem;
-  text-transform: uppercase;
-}
-
-.nav-btn:hover,
-.nav-btn:active {
-  border-bottom: 2px solid $logo-orange-1;
-}
-
-.logo-img {
-  max-width: 12.8rem;
-}
-
 .hero-text-container {
-  width: 120rem;
-  padding: 0 0.8rem;
+  width: 100%;
+  // padding: 0 1.2rem;
+  padding: 0 2%;
 
   position: absolute;
 
