--- a/src/styles/menu-section.module.scss
+++ b/src/styles/menu-section.module.scss
@@ -4,11 +4,12 @@ $logo-green-shade-1: #3d570e;
 .container {
   max-width: 120rem;
   margin: 0 auto;
-  padding-top: 12.8rem;
+  // padding: 12.8rem 1.2rem 0;
+  padding: 12.8rem 2% 0;
 }
 
 .menu-heading {
-  margin-bottom: 3.2rem;
+  margin-bottom: 4.8rem;
 }
 
 .menu-heading::after {
@@ -51,18 +52,18 @@ $logo-green-shade-1: #3d570e;
 }
 
 .menu-subsection {
-  margin-bottom: 4.8rem;
+  margin-bottom: 5.6rem;
 }
 
 .subsection-heading {
-  margin-bottom: 2.4rem;
+  margin-bottom: 3.2rem;
 }
 
 .options-grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  column-gap: 2.4rem;
-  row-gap: 3.2rem;
+  column-gap: 3.6rem;
+  row-gap: 3.6rem;
 }
 
 .order-option {
