--- a/src/styles/navbar.module.scss
+++ b/src/styles/navbar.module.scss
@@ -1,15 +1,10 @@
 $logo-orange-1: #ea9b58;
 
-.container {
-  max-width: 120rem;
-  margin: 0 auto;
-}
-
 .nav-bar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 2.4rem 0.8rem;
+  padding: 2.4rem 0;
 }
 
 .logo-img-hero {
@@ -43,10 +38,13 @@ $logo-orange-1: #ea9b58;
 .scrolled {
   position: fixed;
   top: 0;
+  left: 0;
   background-color: white;
   color: #424242;
   width: 100%;
   box-shadow: 0 0.2rem 1.2rem rgba(0, 0, 0, 0.1);
+
+  // padding: 0 2%;
 
   z-index: 1;
 }
@@ -63,4 +61,10 @@ $logo-orange-1: #ea9b58;
 .scrolled .logo-img-sticky {
   display: block;
   max-width: 17.2rem;
+}
+
+.scrolled .nav-bar {
+  max-width: 120rem;
+  margin: 0 auto;
+  padding: 2.4rem 2%;
 }
